# qtxdg-tools

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
cmake/: qtxdg-tools-config.cmake.in
src/mat/: CMakeLists.txt  defappmatcommand.cpp  defemailclientmatcommand.cpp  deffilemanagermatcommand.cpp  defterminalmatcommand.cpp  defwebbrowsermatcommand.cpp  defwebbrowsermatcommand.h  matcommandinterface.cpp  matcommandmanager.cpp  mimetypematcommand.cpp  openmatcommand.cpp  qtxdg-mat.cpp
